--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 	],
 	"require": {
 		"php": ">=5.3.3",
-		"symfony/finder": "2.1.*"
+		"symfony/finder": "2.1.*",
+		"symfony/event-dispatcher": "2.1.*"
 	},
 	"autoload": {
 		"psr-0": { "Wiser": "src/" }
